--- a/classes/codegen.html
+++ b/classes/codegen.html
@@ -120,7 +120,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L13">src/codegens/codegen-interface.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -146,7 +146,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L43">src/codegens/codegen-interface.ts:43</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -163,7 +163,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L39">src/codegens/codegen-interface.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -192,7 +192,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L19">src/codegens/codegen-interface.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
