--- a/globals.html
+++ b/globals.html
@@ -1022,8 +1022,8 @@
 					<div class="tsd-signature tsd-kind-icon">Bear<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L2">src/integration-tests/results/ts/multi-schema.ts:2</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/pets.ts#L2">src/integration-tests/results/ts/pets.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L7">src/integration-tests/results/ts/multi-schema.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/pets.ts#L7">src/integration-tests/results/ts/pets.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1404,8 +1404,8 @@
 					<div class="tsd-signature tsd-kind-icon">Man<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L3">src/integration-tests/results/ts/multi-schema.ts:3</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/pets.ts#L3">src/integration-tests/results/ts/pets.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L8">src/integration-tests/results/ts/multi-schema.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/pets.ts#L8">src/integration-tests/results/ts/pets.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1445,7 +1445,7 @@
 					<div class="tsd-signature tsd-kind-icon">Mutation<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/traverse.ts#L6">src/traverse.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/traverse.ts#L6">src/traverse.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1689,8 +1689,8 @@
 					<div class="tsd-signature tsd-kind-icon">One<wbr>OfBear<wbr>Man<wbr>Pig<wbr>Sb42<wbr>HoGS<span class="tsd-signature-symbol">:</span> <a href="globals.html#bear" class="tsd-signature-type">Bear</a><span class="tsd-signature-symbol"> | </span><a href="globals.html#man" class="tsd-signature-type">Man</a><span class="tsd-signature-symbol"> | </span><a href="globals.html#pig" class="tsd-signature-type">Pig</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L5">src/integration-tests/results/ts/multi-schema.ts:5</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/pets.ts#L5">src/integration-tests/results/ts/pets.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L10">src/integration-tests/results/ts/multi-schema.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/pets.ts#L10">src/integration-tests/results/ts/pets.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1750,10 +1750,16 @@
 					<div class="tsd-signature tsd-kind-icon">Pets<span class="tsd-signature-symbol">:</span> <a href="globals.html#oneofbearmanpigsb42hogs" class="tsd-signature-type">OneOfBearManPigSb42HoGS</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L1">src/integration-tests/results/ts/multi-schema.ts:1</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/pets.ts#L1">src/integration-tests/results/ts/pets.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L6">src/integration-tests/results/ts/multi-schema.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/pets.ts#L6">src/integration-tests/results/ts/pets.ts:6</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>a bunch of pets
+							a bunch of pets</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias">
 					<a name="pig" class="tsd-anchor"></a>
@@ -1761,8 +1767,8 @@
 					<div class="tsd-signature tsd-kind-icon">Pig<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L4">src/integration-tests/results/ts/multi-schema.ts:4</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/pets.ts#L4">src/integration-tests/results/ts/pets.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L9">src/integration-tests/results/ts/multi-schema.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/pets.ts#L9">src/integration-tests/results/ts/pets.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1964,10 +1970,16 @@
 					<div class="tsd-signature tsd-kind-icon">String<wbr>XdEiCCNL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/multi-schema.ts#L6">src/integration-tests/results/ts/multi-schema.ts:6</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/integration-tests/results/ts/simple.ts#L1">src/integration-tests/results/ts/simple.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/multi-schema.ts#L16">src/integration-tests/results/ts/multi-schema.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/integration-tests/results/ts/simple.ts#L6">src/integration-tests/results/ts/simple.ts:6</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>simplest test case
+							simplest test case</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias">
 					<a name="supportedlanguages" class="tsd-anchor"></a>
@@ -1975,7 +1987,7 @@
 					<div class="tsd-signature tsd-kind-icon">Supported<wbr>Languages<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"rust"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"rs"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"typescript"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"ts"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/index.ts#L13">src/index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/index.ts#L13">src/index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -2903,7 +2915,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L15">src/utils.ts:15</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L15">src/utils.ts:15</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -4067,7 +4079,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/ensure-subschema-titles.ts#L27">src/ensure-subschema-titles.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/ensure-subschema-titles.ts#L27">src/ensure-subschema-titles.ts:27</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -11951,7 +11963,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L40">src/utils.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L40">src/utils.ts:40</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -12360,7 +12372,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L25">src/utils.ts:25</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L25">src/utils.ts:25</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -13804,7 +13816,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L36">src/utils.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L36">src/utils.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -13846,13 +13858,13 @@
 					<a name="sortkeys" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> sort<wbr>Keys</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">sort<wbr>Keys<span class="tsd-signature-symbol">(</span>o<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></li>
+						<li class="tsd-signature tsd-kind-icon">sort<wbr>Keys<span class="tsd-signature-symbol">(</span>o<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L39">src/utils.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L39">src/utils.ts:39</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -13861,9 +13873,7 @@
 									<h5>o: <span class="tsd-signature-type">any</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4>
-							<ul class="tsd-parameters">
-							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -13877,7 +13887,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L37">src/utils.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L37">src/utils.ts:37</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -14583,7 +14593,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/traverse.ts#L33">src/traverse.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/traverse.ts#L33">src/traverse.ts:33</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -16766,7 +16776,7 @@
 				<h2>Utils Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function">
 					<a name="ensureschematitles" class="tsd-anchor"></a>
-					<h3>ensure<wbr>Schema<wbr>Titles</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> ensure<wbr>Schema<wbr>Titles</h3>
 					<ul class="tsd-signatures tsd-kind-function">
 						<li class="tsd-signature tsd-kind-icon">ensure<wbr>Schema<wbr>Titles<span class="tsd-signature-symbol">(</span>s<span class="tsd-signature-symbol">: </span><a href="interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/schema.html" class="tsd-signature-type">Schema</a></li>
 					</ul>
@@ -16774,7 +16784,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L118">src/utils.ts:118</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L118">src/utils.ts:118</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -16784,18 +16794,15 @@
 										of the tree. Think depth first traversal, but where the internal nodes&#39; titles are not resolved until
 									it&#39;s entire subtree is complete.</p>
 								</div>
-								<dl class="tsd-comment-tags">
-									<dt>category</dt>
-									<dd><p>SchemaImprover</p>
-									</dd>
-								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>s: <a href="interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>The schema to ensure has names for it and all subschemas of it.</p>
+										<div class="lead">
+											<p>The schema to ensure has names for it and all subschemas of it.</p>
+										</div>
 									</div>
 								</li>
 							</ul>
@@ -16814,7 +16821,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/utils.ts#L60">src/utils.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/utils.ts#L60">src/utils.ts:60</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -16856,7 +16863,7 @@
 					<div class="tsd-signature tsd-kind-icon">default<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/traverse.ts#L18">src/traverse.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/traverse.ts#L18">src/traverse.ts:18</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -16865,7 +16872,7 @@
 						<div class="tsd-signature tsd-kind-icon">skip<wbr>First<wbr>Mutation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> =&nbsp;false</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/traverse.ts#L19">src/traverse.ts:19</a></li>
+								<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/traverse.ts#L19">src/traverse.ts:19</a></li>
 							</ul>
 						</aside>
 					</section>
