--- a/interfaces/typeintermediaterepresentation.html
+++ b/interfaces/typeintermediaterepresentation.html
@@ -79,6 +79,7 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="typeintermediaterepresentation.html#documentationcomment" class="tsd-kind-icon">documentation<wbr>Comment</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="typeintermediaterepresentation.html#macros" class="tsd-kind-icon">macros</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="typeintermediaterepresentation.html#prefix" class="tsd-kind-icon">prefix</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="typeintermediaterepresentation.html#typing" class="tsd-kind-icon">typing</a></li>
@@ -90,12 +91,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="macros" class="tsd-anchor"></a>
-					<h3>macros</h3>
-					<div class="tsd-signature tsd-kind-icon">macros<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="documentationcomment" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> documentation<wbr>Comment</h3>
+					<div class="tsd-signature tsd-kind-icon">documentation<wbr>Comment<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L5">src/codegens/codegen-interface.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L8">src/codegens/codegen.ts:8</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="macros" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> macros</h3>
+					<div class="tsd-signature tsd-kind-icon">macros<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L5">src/codegens/codegen.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L6">src/codegens/codegen-interface.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L6">src/codegens/codegen.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">typing<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/31490e9/src/codegens/codegen-interface.ts#L7">src/codegens/codegen-interface.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/f9882d2/src/codegens/codegen.ts#L7">src/codegens/codegen.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -136,6 +147,9 @@
 					<li class="current tsd-kind-interface">
 						<a href="typeintermediaterepresentation.html" class="tsd-kind-icon">Type<wbr>Intermediate<wbr>Representation</a>
 						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="typeintermediaterepresentation.html#documentationcomment" class="tsd-kind-icon">documentation<wbr>Comment</a>
+							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="typeintermediaterepresentation.html#macros" class="tsd-kind-icon">macros</a>
 							</li>
