--- a/interfaces/objectofbooleanvyg3aeth5px0gxmy.html
+++ b/interfaces/objectofbooleanvyg3aeth5px0gxmy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ObjectOfBooleanQg3XFxa5U126EkTS | @open-rpc/schema-utils-js</title>
+	<title>ObjectOfBooleanVyG3AETh5PX0GXMY | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="objectofbooleanqg3xfxa5u126ekts.html">ObjectOfBooleanQg3XFxa5U126EkTS</a>
+					<a href="objectofbooleanvyg3aeth5px0gxmy.html">ObjectOfBooleanVyG3AETh5PX0GXMY</a>
 				</li>
 			</ul>
-			<h1>Interface ObjectOfBooleanQg3XFxa5U126EkTS</h1>
+			<h1>Interface ObjectOfBooleanVyG3AETh5PX0GXMY</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ObjectOfBooleanQg3XFxa5U126EkTS</span>
+						<span class="target">ObjectOfBooleanVyG3AETh5PX0GXMY</span>
 					</li>
 				</ul>
 			</section>
@@ -83,7 +83,7 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbooleanqg3xfxa5u126ekts.html#ripslip" class="tsd-kind-icon">ripslip</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbooleanvyg3aeth5px0gxmy.html#ripslip" class="tsd-kind-icon">ripslip</a></li>
 							</ul>
 						</section>
 					</div>
@@ -94,10 +94,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="ripslip" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ripslip</h3>
-					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#booleanqg3xfxa5" class="tsd-signature-type">BooleanQg3XFxa5</a></div>
+					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#booleanvyg3aeth" class="tsd-signature-type">BooleanVyG3AETh</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/7ee9e3f/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d401f7a/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,10 +116,10 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="objectofbooleanqg3xfxa5u126ekts.html" class="tsd-kind-icon">Object<wbr>OfBoolean<wbr>Qg3XFxa5<wbr>U126<wbr>EkTS</a>
+						<a href="objectofbooleanvyg3aeth5px0gxmy.html" class="tsd-kind-icon">Object<wbr>OfBoolean<wbr>VyG3AETh5PX0GXMY</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="objectofbooleanqg3xfxa5u126ekts.html#ripslip" class="tsd-kind-icon">ripslip</a>
+								<a href="objectofbooleanvyg3aeth5px0gxmy.html#ripslip" class="tsd-kind-icon">ripslip</a>
 							</li>
 						</ul>
 					</li>
