--- a/classes/golang.html
+++ b/classes/golang.html
@@ -87,11 +87,11 @@
 								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section tsd-is-inherited">
+						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="golang.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
 						</section>
@@ -111,7 +111,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/aecb719/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3b30013/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -125,7 +125,7 @@
 					</ul>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 					<a name="getcodeprefix" class="tsd-anchor"></a>
@@ -138,33 +138,27 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/aecb719/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3b30013/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 					<a name="getsafetitle" class="tsd-anchor"></a>
 					<h3>get<wbr>Safe<wbr>Title</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>Safe<wbr>Title<span class="tsd-signature-symbol">(</span>title<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getsafetitle">getSafeTitle</a></p>
+								<p>Overrides <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getsafetitle">getSafeTitle</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/aecb719/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3b30013/src/codegens/golang.ts#L6">src/codegens/golang.ts:6</a></li>
 								</ul>
 							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Generic title transform that gives a title without special characters or spaces. It may be overriden if
-									this implementation does not suffice.</p>
-								</div>
-							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -186,7 +180,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#transpile">transpile</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/aecb719/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3b30013/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -221,7 +215,7 @@
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="golang.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 								<a href="golang.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
